fix: adjust column width on mobile

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -258,7 +258,7 @@ section.education {
   }
 }
 
-@media (max-width: 26rem) {
+@media (max-width: 24.75rem) {
   section.skills {
     ul li {
       min-width: 100%;
